exageostat_parsec/hicma/chameleon/control/morse_zf90.F90


      interface
         function MORSE_zhetrd_c(jobz,uplo,N,A,LDA,D,E,descT,Q,LDQ) &
          & bind(c, name='MORSE_zhetrd')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zhetrd_c
            integer(kind=c_int), value :: jobz
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            type(c_ptr), value :: D
            type(c_ptr), value :: E
            type(c_ptr), value :: descT
            type(c_ptr), value :: Q
            integer(kind=c_int), value :: LDQ
          end function MORSE_zhetrd_c
      end interface

      interface
         function MORSE_zlacpy_c(uplo,M,N,A,LDA,B,LDB) &
          & bind(c, name='MORSE_zlacpy')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zlacpy_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: M
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            type(c_ptr), value :: B
            integer(kind=c_int), value :: LDB
          end function MORSE_zlacpy_c
      end interface

      interface
         function MORSE_zlange_c(norm,M,N,A,LDA,work) &
          & bind(c, name='MORSE_zlange')
            use iso_c_binding
            implicit none
            real(kind=c_double) :: MORSE_zlange_c
            integer(kind=c_int), value :: norm
            integer(kind=c_int), value :: M
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            type(c_ptr), value :: work
          end function MORSE_zlange_c
      end interface

#if defined(PRECISION_z) || defined(PRECISION_c)
      interface
         function MORSE_zlanhe_c(norm,uplo,N,A,LDA,work) &
          & bind(c, name='MORSE_zlanhe')
            use iso_c_binding
            implicit none
            real(kind=c_double) :: MORSE_zlanhe_c
            integer(kind=c_int), value :: norm
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            type(c_ptr), value :: work
          end function MORSE_zlanhe_c
      end interface
#endif

      interface
         function MORSE_zlansy_c(norm,uplo,N,A,LDA,work) &
          & bind(c, name='MORSE_zlansy')
            use iso_c_binding
            implicit none
            real(kind=c_double) :: MORSE_zlansy_c
            integer(kind=c_int), value :: norm
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            type(c_ptr), value :: work
          end function MORSE_zlansy_c
      end interface

      interface
         function MORSE_zlaset_c(uplo,M,N,alpha,beta,A,LDA) &
          & bind(c, name='MORSE_zlaset')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zlaset_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: M
            integer(kind=c_int), value :: N
            complex(kind=c_double_complex), value :: alpha
            complex(kind=c_double_complex), value :: beta
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
          end function MORSE_zlaset_c
      end interface

      interface
         function MORSE_zlaswp_c(N,A,LDA,K1,K2,IPIV,INCX) &
          & bind(c, name='MORSE_zlaswp')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zlaswp_c
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            integer(kind=c_int), value :: K1
            integer(kind=c_int), value :: K2
            type(c_ptr), value :: IPIV
            integer(kind=c_int), value :: INCX
          end function MORSE_zlaswp_c
      end interface

      interface
         function MORSE_zlaswpc_c(N,A,LDA,K1,K2,IPIV,INCX) &
          & bind(c, name='MORSE_zlaswpc')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zlaswpc_c
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            integer(kind=c_int), value :: K1
            integer(kind=c_int), value :: K2
            type(c_ptr), value :: IPIV
            integer(kind=c_int), value :: INCX
          end function MORSE_zlaswpc_c
      end interface

      interface
         function MORSE_zlauum_c(uplo,N,A,LDA) &
          & bind(c, name='MORSE_zlauum')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zlauum_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
          end function MORSE_zlauum_c
      end interface

#if defined(PRECISION_z) || defined(PRECISION_c)
      interface
         function MORSE_zplghe_c(bump,uplo,N,A,LDA,seed) &
          & bind(c, name='MORSE_zplghe')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zplghe_c
            real(kind=c_double), value :: bump
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            integer(kind=c_long_long), value :: seed
          end function MORSE_zplghe_c
      end interface
#endif

      interface
         function MORSE_zplgsy_c(bump,uplo,N,A,LDA,seed) &
          & bind(c, name='MORSE_zplgsy')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zplgsy_c
            complex(kind=c_double_complex), value :: bump
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            integer(kind=c_long_long), value :: seed
          end function MORSE_zplgsy_c
      end interface

      interface
         function MORSE_zplrnt_c(M,N,A,LDA,seed) &
          & bind(c, name='MORSE_zplrnt')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zplrnt_c
            integer(kind=c_int), value :: M
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            integer(kind=c_long_long), value :: seed
          end function MORSE_zplrnt_c
      end interface

      interface
         function MORSE_zposv_c(uplo,N,NRHS,A,LDA,B,LDB) &
          & bind(c, name='MORSE_zposv')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zposv_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: N
            integer(kind=c_int), value :: NRHS
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            type(c_ptr), value :: B
            integer(kind=c_int), value :: LDB
          end function MORSE_zposv_c
      end interface

      interface
         function MORSE_zsysv_c(uplo,N,NRHS,A,LDA,B,LDB) &
          & bind(c, name='MORSE_zsysv')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zsysv_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: N
            integer(kind=c_int), value :: NRHS
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            type(c_ptr), value :: B
            integer(kind=c_int), value :: LDB
          end function MORSE_zsysv_c
      end interface

      interface
         function MORSE_zpotrf_c(uplo,N,A,LDA) &
          & bind(c, name='MORSE_zpotrf')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zpotrf_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
          end function MORSE_zpotrf_c
      end interface

      interface
         function MORSE_zsytrf_c(uplo,N,A,LDA) &
          & bind(c, name='MORSE_zsytrf')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zsytrf_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
          end function MORSE_zsytrf_c
      end interface

      interface
         function MORSE_zpotri_c(uplo,N,A,LDA) &
          & bind(c, name='MORSE_zpotri')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zpotri_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
          end function MORSE_zpotri_c
      end interface

      interface
         function MORSE_zpotrs_c(uplo,N,NRHS,A,LDA,B,LDB) &
          & bind(c, name='MORSE_zpotrs')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zpotrs_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: N
            integer(kind=c_int), value :: NRHS
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            type(c_ptr), value :: B
            integer(kind=c_int), value :: LDB
          end function MORSE_zpotrs_c
      end interface

      interface
         function MORSE_zsytrs_c(uplo,N,NRHS,A,LDA,B,LDB) &
          & bind(c, name='MORSE_zsytrs')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zsytrs_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: N
            integer(kind=c_int), value :: NRHS
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            type(c_ptr), value :: B
            integer(kind=c_int), value :: LDB
          end function MORSE_zsytrs_c
      end interface

      interface
         function MORSE_zsymm_c(side,uplo,M,N,alpha,A,LDA,B,LDB,beta,C,LDC) &
          & bind(c, name='MORSE_zsymm')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zsymm_c
            integer(kind=c_int), value :: side
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: M
            integer(kind=c_int), value :: N
            complex(kind=c_double_complex), value :: alpha
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            type(c_ptr), value :: B
            integer(kind=c_int), value :: LDB
            complex(kind=c_double_complex), value :: beta
            type(c_ptr), value :: C
            integer(kind=c_int), value :: LDC
          end function MORSE_zsymm_c
      end interface
